charts init complete

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <ul id="slide-out" class="side-nav fixed leftside-navigation ">
                     <li class="user-details cyan darken-2">
                         <div class="row">
-                            <div class="col col s4 m4 l4">
+                            <div class="col s4 m4 l4">
                                 <img src="images/user.jpg" alt="" class="circle responsive-img valign profile-image">
                             </div>
-                            <div class="col col s8 m8 l8">
+                            <div class="col s8 m8 l8">
                                 <ul id="profile-dropdown" class="dropdown-content">
                                     <li><a href="#"><i class="mdi-action-face-unlock"></i> Profile</a>
                                     </li>
