Grunt basics complete

--- a/chart.html
+++ b/chart.html
@@ -21,8 +21,8 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
     <!-- INCLUDED PLUGIN CSS ON THIS PAGE -->
-    <link href="js/plugins/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet" media="screen,projection">
-    <link href="js/plugins/chartist-js/chartist.min.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="plugins/perfect-scrollbar/perfect-scrollbar.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="plugins/chartist-js/chartist.min.css" type="text/css" rel="stylesheet" media="screen,projection">
 </head>
 
 <body ng-app="altavault">
@@ -175,15 +175,15 @@
     <script type="text/javascript" src="js/moment.js"></script>
     <!-- angularJS -->
     <script src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="build/app.js"></script>
     <!-- jQuery Library -->
     <script src="js/jquery.min.js"></script>
     <!--materialize js-->
-    <script type="text/javascript" src="js/materialize.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
     <!--scrollbar-->
-    <script type="text/javascript" src="js/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script type="text/javascript" src="plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <!-- chartjs -->
-    <script type="text/javascript" src="js/plugins/chartist-js/chartist.min.js"></script>
+    <script type="text/javascript" src="plugins/chartist-js/chartist.min.js"></script>
 </body>
 
 </html>
