--- a/login.html
+++ b/login.html
@@ -80,11 +80,11 @@
 
 <!-- angularJS -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="build/app.js"></script>
 <!-- jQuery Library --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <!--materialize js--> 
-<script type="text/javascript" src="js/materialize.js"></script> 
+<script type="text/javascript" src="js/materialize.min.js"></script> 
 <!--plugins.js - Some Specific JS codes for Plugin Settings--> 
 <!-- <script type="text/javascript" src="js/plugins.js"></script> -->
 <!-- Preloader-->
