--- a/login.html
+++ b/login.html
@@ -19,8 +19,7 @@
 <!-- For Windows Phone -->
 
 <!-- CORE CSS-->
-<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
-<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
+<link href="build/styles.css" type="text/css" rel="stylesheet" media="screen,projection">
 <link href="css/page-center.css" type="text/css" rel="stylesheet" media="screen,projection">
 <!-- <link href="css/scroller.css" type="text/css" rel="stylesheet" media="screen,projection">
 <link href="css/nprogress.css" type="text/css" rel="stylesheet" media="screen,projection"> -->
